--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -325,7 +325,7 @@ hr {
   background: #ff3500;
 }
 .btn {
-  background: #f9218d;
+  background: #FEB845;
   -moz-user-select: none;
   text-transform: capitalize;
   color: #fff;
@@ -353,7 +353,7 @@ hr {
   top: 0;
   width: 100%;
   height: 100%;
-  background: #da1276;
+  background: #f79e05;
   z-index: 1;
   border-radius: 5px;
   transition: transform 0.5s;
@@ -4549,26 +4549,31 @@ del {
   background-image: -webkit-linear-gradient(0deg, #f9218d 0%, #6c19f6 100%);
 }
 .slider-padding {
-  padding-top: 130px;
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
 @media (max-width: 767px) {
   .slider-padding {
     padding-top: 40px;
+    padding-bottom: 40px;
   }
 }
 @media only screen and (min-width: 576px) and (max-width: 767px) {
   .slider-padding {
     padding-top: 40px;
+    padding-bottom: 40px;
   }
 }
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .slider-padding {
     padding-top: 40px;
+    padding-bottom: 40px;
   }
 }
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
   .slider-padding {
-    padding-top: 100px;
+    padding-top: 50px;
+    padding-bottom: 50px;
   }
 }
 .slider-area {
