--- a/assets/scss/_h1-hero.scss
+++ b/assets/scss/_h1-hero.scss
@@ -34,15 +34,19 @@
     padding-top: 130px;
     @media #{$xs}{
         padding-top: 40px;
+        padding-bottom: 40px;
     }
      @media #{$sm}{
         padding-top: 40px;
+        padding-bottom: 40px;
     }
       @media #{$md}{
       padding-top: 40px;
+      padding-bottom: 40px;
     } 
      @media #{$lg}{
-      padding-top: 100px;
+      padding-top: 50px;
+      padding-bottom: 50px;
     }
 }
 .slider-area{
