--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Nunito:300,400,600,700,800,900|Poppins:300,400,500,600,700,800,900&display=swap");
+html {
+  scroll-behavior:smooth;
+}
 .white-bg {
   background: #ffffff;
 }
@@ -4509,7 +4512,7 @@ del {
   padding: 20px 20px;
 }
 .header-area .slicknav_btn {
-  top: -43px;
+  top: -60px;
 }
 .slicknav_menu .slicknav_nav a:hover {
   background: transparent;
@@ -5136,6 +5139,7 @@ z .slider-area .hero-cap h2 {
   font-weight: 300;
   margin-bottom: 16px;
   font-size: 16px;
+  list-style-type: disc;
 }
 .pricing-card-area .single-card .card-bottom ul li:last-child {
   margin-bottom: 45px;
